[package]
name = "tower_duplex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.4", features = ["load"] }
tracing = "0.1"

[dev-dependencies]
proptest = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
